<resources>
    <string name="app_name">DiabeSafe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
    <string name="terdeteksi_tidak_diabetes">Anda Tidak Terdeteksi Diabetes</string>
    <string name="terdeteksi_diabetes">Anda Terdeteksi Diabetes</string>
    <string name="saran">Saran</string>
    <string name="saran_negative">Berikut beberapa saran yang dapat anda ikuti untuk mencegah diabetes:\n\n1. Rutin berolahraga\n2. Menjaga berat badan tetap ideal\n3. Menerapkan pola makan sehat\n4. Melakukan pengecekan gula darah rutin\n5. Mengelola stres\n6. Rajin minum air putih\n7. Mempertahankan kadar vitamin D\n8. Menghentikan kebiasaan merokok</string>
    <string name="kembali_ke_halaman_utama">Kembali Ke Halaman Utama</string>
    <string name="saran_positive">Berikut beberapa saran yang dapat anda ikuti untuk:\n\n1. Periksa ke dokter\n2. Cek di halodok\n3. Segera ke Faskes terdekat</string>
    <string name="konfirmasi_logout">Konfirmasi Logout</string>
    <string name="konfirmasi_logout_dialog">Apakah Anda yakin ingin logout?</string>
    <string name="yes">Ya</string>
    <string name="cancle">Batal</string>
    <string name="name_unknown">Nama Tidak Diketahui</string>
    <string name="nickname_unknown">Nickname Tidak Diketahui</string>
    <string name="birt_date_unknown">Tanggal Lahir Tidak Diketahui</string>
    <string name="gender_unknown">Gender Tidak Diketahui</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="name_invalid">Nama hanya boleh huruf dan panjang antara 3-50 karakter</string>
    <string name="password_invalid">Password harus maksimal 8 karakter</string>
    <string name="mail_pass_invalid">Harap isi email dan password</string>
    <string name="email_harus_diisi">Email harus diisi</string>
    <string name="password_harus_diisi">Password harus diisi</string>
    <string name="konfirmasi_password_harus_diisi">Konfirmasi password harus diisi</string>
    <string name="password_tidak_sesuai">Password tidak sesuai</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <string name="data_profil_berhasil_disimpan">Data profil berhasil disimpan.</string>
    <string name="harap_isi_semua_kolom">Harap isi semua kolom.</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="harap_isi_semua_kolom_dengan_benar">Harap isi semua kolom dengan benar.</string>
    <string name="debug_bmi_calculation_failed_invalid_input">Debug: BMI calculation failed - invalid input</string>
    <string name="debug_bmi_calculated_as">Debug: BMI calculated as %1$s</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="birth_date_yyyy_mm_dd">Birth Date (YYYY-MM-DD)</string>
    <string name="gender">Gender</string>
    <string name="tap_to_select_photo">Tap to select photo</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_icon">Add Icon</string>
    <string name="add_predict">Add Predict</string>
    <string name="history_prediction">History prediction</string>
    <string name="selamat_datang_semoga_hari_ini_penuh_kebahagiaan_dan_kesehatan">Selamat datang! Semoga hari ini penuh kebahagiaan dan kesehatan!</string>
    <string name="ingat_untuk_selalu_menjaga_kesehatan_perhatikan_pola_makan_dan_bergerak_aktif">Ingat untuk selalu menjaga kesehatan, perhatikan pola makan, dan bergerak aktif!</string>
    <string name="berita_seputar_kesehatan">Berita Seputar Kesehatan</string>
    <string name="please_fill_this_form">Please fill this form</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="tinggi_badan_m">Tinggi Badan (m)</string>
    <string name="berat_badan_kg">Berat Badan (kg)</string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="prediksi_diabetes">Prediksi Diabetes</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="lewati">Lewati</string>
    <string name="profile">Profile</string>
    <string name="full_name_profile">Full Name</string>
    <string name="email_profile">Email</string>
    <string name="value_nickname">Johnny</string>
    <string name="value_birth_day">01 Jan 2000</string>
    <string name="value_gender">Male</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="selamat_datang_di_diabesafe">Selamat Datang di DiabeSafe!</string>
    <string name="diabesafe_adalah_aplikasi_cerdas_yang_dirancang_untuk_membantu_anda_mendeteksi_risiko_diabetes_secara_dini">DiabeSafe adalah aplikasi cerdas yang dirancang untuk membantu Anda mendeteksi risiko diabetes secara dini.</string>
    <string name="cegah_diabetes_lebih_awal">Cegah Diabetes Lebih Awal</string>
    <string name="dengan_mengetahui_risiko_lebih_awal_anda_dapat_mengambil_langkah_yang_tepat_untuk_mencegah_diabetes">Dengan mengetahui risiko lebih awal, Anda dapat mengambil langkah yang tepat untuk mencegah diabetes.</string>
    <string name="analisis_cepat_dan_akurat">Analisis Cepat dan Akurat</string>
    <string name="language_changed">Bahasa telah diubah.</string>
    <string name="hanya_dengan_mengunggah_data_kesehatan_anda_diabesafe_akan_memberikan_hasil_analisis_lengkap_dan_akurat">Hanya dengan mengunggah data kesehatan Anda, DiabeSafe akan memberikan hasil analisis lengkap dan akurat.</string>
    <string name="nicknameaja">Nickname:</string>
    <string name="birth_dateaja">Birth Date:</string>
    <string name="genderaja">Gender:</string>
    <string name="koneksi_error">Koneksi Error. Silakan periksa koneksi internet Anda.</string>
    <string name="email_unknown"> Email Tidak Diketahui</string>
</resources>