<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/profile"
        android:textColor="@color/purple_500"
        android:textSize="45sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Foto Profil (Berbentuk Lingkaran) -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_background"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judul" />

    <!-- Nama Lengkap -->
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/full_name_profile"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email -->
    <TextView
        android:id="@+id/email_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_profile"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light_italic"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Nickname -->
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/nicknameaja"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/email_user"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/value_nickname"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/email_user"
        app:layout_constraintStart_toEndOf="@id/profile" />

    <!-- Tanggal Lahir -->
    <TextView
        android:id="@+id/profile_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/birth_dateaja"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/profile_nickname"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/value_birth_day"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/profile_nickname"
        app:layout_constraintStart_toEndOf="@id/profile_birth" />

    <!-- Gender -->
    <TextView
        android:id="@+id/profile_gender_aja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/genderaja"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/profile_birth_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/value_gender"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/profile_birth_date"
        app:layout_constraintStart_toEndOf="@id/profile_gender_aja" />

    <!-- Tombol Ganti Bahasa -->
    <Button
        android:id="@+id/btn_edit_bahasa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_500"
        android:drawableLeft="@drawable/ic_bahasa"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ganti_bahasa"
        app:layout_constraintTop_toBottomOf="@id/profile_gender_aja"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_profile"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Tombol Edit Profil -->
    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/poppins_semibold"
        android:drawableRight="@drawable/ic_editprofile"
        android:text="@string/edit_profile"
        app:layout_constraintTop_toBottomOf="@id/profile_gender_aja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_edit_bahasa" />

    <!-- Tombol Logout -->
    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_logout"
        android:contentDescription="Logout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
