<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.prediction.result1.ResultPositiveFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background2">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_prediksi"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/headerImage"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            app:lottie_rawRes="@raw/positive"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/resultPositiveText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/terdeteksi_diabetes"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tvSuggestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/saran"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvSuggestionContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saran_positive"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/kembali_ke_halaman_utama"
        android:textColor="@android:color/white"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/rounded_corner_background"/>
</LinearLayout>