<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.home.HomeFragment">

    <!-- Pesan Selamat datang -->
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/selamat_datang_semoga_hari_ini_penuh_kebahagiaan_dan_kesehatan"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#000000" />

    <!-- Pesan Motivasi -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_input"
        android:padding="12dp"
        android:layout_marginTop="16dp">

        <com.airbnb.lottie.LottieAnimationView
            app:lottie_rawRes="@raw/animate_reminder"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/ingat_untuk_selalu_menjaga_kesehatan_perhatikan_pola_makan_dan_bergerak_aktif"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Judul Berita Kesehatan -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berita_seputar_kesehatan"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="24dp" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        app:lottie_rawRes="@raw/animation_update"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:text="@string/koneksi_error"
        android:visibility="gone"
        android:gravity="center"
        android:fontFamily="@font/poppins" />


    <!-- RecyclerView untuk menampilkan berita -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNews"
        tools:listitem="@layout/item_card"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:layout_marginTop="8dp" />
</LinearLayout>
