<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FCFF"
    tools:context=".ui.auth.register.RegisterFragment">

    <!-- ProgressBar -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/animate_register"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!-- Teks "Register" -->
    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/purple_500"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/registerCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> <!-- Posisi di tengah atas -->

    <!-- CardView di bagian bawah -->
    <androidx.cardview.widget.CardView
        android:id="@+id/registerCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- TextInputLayout for Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:startIconDrawable="@drawable/ic_email">

                <com.capstone.diabesafe.custom.EmailCustomEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_address"
                    android:fontFamily="@font/poppins"
                    android:textColor="#000"
                    android:inputType="textEmailAddress"
                    android:paddingStart="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle">

                <com.capstone.diabesafe.custom.PasswordCustomEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:fontFamily="@font/poppins"
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:paddingStart="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle">

                <com.capstone.diabesafe.custom.PasswordCustomEditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm_password"
                    android:fontFamily="@font/poppins"
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:paddingStart="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tombol Register -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#01796F"
                android:text="@string/register"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

            <!-- Teks Login -->
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_light_italic"
                android:gravity="center"
                android:text="@string/already_have_an_account_login"
                android:textColor="#01796F"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
